Create Match. Courtesy of Fidan

--- a/app/src/main/res/layout/fragment_create_match.xml
+++ b/app/src/main/res/layout/fragment_create_match.xml
@@ -1,14 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateMatch">
+    android:padding="16dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Location Dropdown -->
+    <Spinner
+        android:id="@+id/spinnerLocation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:prompt="@string/select_location"
+        android:entries="@array/location_options" />
 
-</FrameLayout>
+    <!-- Date and Time Selection -->
+    <TextView
+        android:id="@+id/textViewDateTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/date_and__time"
+        android:textSize="18sp"
+        android:layout_below="@id/spinnerLocation"
+        android:layout_marginTop="16dp"/>
+
+    <!-- Date and Time Pickers -->
+    <LinearLayout
+        android:id="@+id/dateTimeContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/textViewDateTime"
+        android:layout_marginTop="8dp">
+
+        <!-- Date Picker -->
+        <Spinner
+            android:id="@+id/spinnerDate"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:prompt="@string/select_date"
+            android:entries="@array/date_options" />
+
+        <!-- Time Picker -->
+        <Spinner
+            android:id="@+id/spinnerTime"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:prompt="@string/select_time"
+            android:entries="@array/time_options" />
+    </LinearLayout>
+
+    <!-- Match Type Dropdown -->
+    <Spinner
+        android:id="@+id/spinnerMatchType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/dateTimeContainer"
+        android:layout_marginTop="16dp"
+        android:prompt="@string/select_match_type"
+        android:entries="@array/match_type_options" />
+
+    <!-- Create Match Button -->
+    <Button
+        android:id="@+id/buttonCreateMatch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinnerMatchType"
+        android:layout_marginTop="24dp"
+        android:text="@string/create__match" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/back_button_description"
+        android:onClick="onBackButtonClick" />
+
+
+</RelativeLayout>
