--- a/app/src/main/res/layout/fragment_browse_matches.xml
+++ b/app/src/main/res/layout/fragment_browse_matches.xml
@@ -1,6 +1,8 @@
 <!-- browser_matches_fragment.xml -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentBrowseMatches">
