--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,18 +24,13 @@
             android:id="@+id/textEmail"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:text="@string/email"
-            tools:layout_editor_absoluteY="172dp" />
+            android:text="@string/email"/>
         <EditText
             android:id="@+id/editTextEmailAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="155dp" />
+            android:inputType="textEmailAddress" />
 
     </LinearLayout>
 
@@ -56,8 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPassword"
-            tools:layout_editor_absoluteY="236dp" />
+            android:inputType="textPassword"/>
 
     </LinearLayout>
 
