--- a/app/src/main/res/layout/fragment_browse_matches.xml
+++ b/app/src/main/res/layout/fragment_browse_matches.xml
@@ -93,7 +93,7 @@
                 android:text="Experience:"/>
 
             <Spinner
-                android:id="@+id/spinnerExperieneFilter"
+                android:id="@+id/spinnerExperienceFilter"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"/>
@@ -155,6 +155,7 @@
         android:id="@+id/recyclerViewMatches"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp" />
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"/>
 
 </LinearLayout>
