--- a/app/src/main/res/layout/fragment_browse_matches.xml
+++ b/app/src/main/res/layout/fragment_browse_matches.xml
@@ -20,6 +20,7 @@
             android:textSize="12pt"
             android:textStyle="bold"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_margin="15dp" />
 
         <Button
