--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
             android:id="@+id/textEmail"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/email"/>
         <EditText
             android:id="@+id/editTextEmailAddress"
@@ -44,7 +45,8 @@
             android:id="@+id/textPassword"
             android:layout_width="75dp"
             android:layout_height="wrap_content"
-            android:text="@string/password" />
+            android:text="@string/password"
+            android:gravity="center"/>
 
         <EditText
             android:id="@+id/editTextPassword"
